--- a/src/pages/docs/ring-offset-width.mdx
+++ b/src/pages/docs/ring-offset-width.mdx
@@ -1,97 +1,110 @@
 ---
 title: "Ring Offset Width"
-description: "Utilities for creating outline rings with box-shadows."
+description: "Utilities for simulating an offset when adding outline rings."
 ---
 
 import plugin from 'tailwindcss/lib/plugins/ringOffsetWidth'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
 
-export const classes = { plugin }
+export const classes = {
+  plugin,
+  transformProperties: ({ selector, properties }) => {
+    properties['box-shadow'] = `0 0 0 var(--ring-offset-width) var(--ring-offset-color), var(--ring-shadow)`
+    return properties
+  }
+}
 
-## Basic rings
 
-Use the `ring-{width}` utilities to apply solid box-shadow of a specific thickness to an element. By default, rings are a semi-transparent blue color, similar to the default focus ring style in many systems.
+## Usage
 
-```html lightBlue
-<template preview class="flex space-x-6 justify-center p-8">
-  <button class="w-32 py-2 rounded-md font-semibold text-white bg-blue-500">
-    Unfocused
-  </button>
-  <button class="w-32 py-2 rounded-md font-semibold text-white bg-blue-500 ring">
-    Focused
-  </button>
-</template>
-
-<button class="... **focus:ring**">
-  Button
-</button>
-```
-
-Ring utilities compose gracefully with regular `shadow-{size}` utilities and can be combined on the same element.
-
-You can also control the color, opacity, and offset of rings using the [ringColor](/docs/ring-color), [ringOpacity](/docs/ring-opacity), and [ringOffsetWidth](/docs/ring-offset-width) utilities.
-
-## Inset rings
-
-Use the `ring-inset` utility to force a ring to render on the inside of an element instead of the outside. This can be useful for elements at the edge of the screen where part of the ring wouldn't be visible.
+Use the `ring-offset-{width}` utilities to simulate an offset by adding solid white box-shadow and increasing the thickness of the accompanying outline ring to accommodate the offset.
 
 ```html fuchsia
-<template preview class="flex space-x-6 justify-center p-8">
-  <button class="w-32 py-2 rounded-md font-semibold text-white bg-pink-500 ring-4 ring-pink-300">
-    Default
-  </button>
-  <button class="w-32 py-2 rounded-md font-semibold text-white bg-pink-500 ring-4 ring-pink-300 ring-inset">
-    Inset
-  </button>
+<template preview class="p-0 border -mb-px">
+  <div class="bg-white grid grid-cols-1 sm:grid-cols-3 gap-6 justify-items-center p-8 ">
+    <button tabindex="-1" class="focus:outline-none text-sm w-32 py-3 rounded-md font-semibold text-white bg-pink-500 ring ring-pink-600 ring-offset-0">
+      ring-offset-0
+    </button>
+    <button tabindex="-1" class="focus:outline-none text-sm w-32 py-3 rounded-md font-semibold text-white bg-pink-500 ring ring-pink-600 ring-offset-2">
+      ring-offset-2
+    </button>
+    <button tabindex="-1" class="focus:outline-none text-sm w-32 py-3 rounded-md font-semibold text-white bg-pink-500 ring ring-pink-600 ring-offset-4">
+      ring-offset-4
+    </button>
+  </div>
 </template>
 
-<button class="... ring-4 ring-pink-300">
-  Default
-</button>
-
-<button class="... ring-4 ring-pink-300 **ring-inset**">
-  Inset
-</button>
+<button class="... ring ring-pink-600 **ring-offset-0**">ring-0</button>
+<button class="... ring ring-pink-600 **ring-offset-2**">ring-2</button>
+<button class="... ring ring-pink-600 **ring-offset-4**">ring-4</button>
 ```
+
+### Changing the offset color
+
+You can't actually offset a box-shadow in CSS, so we have to fake it using a solid color shadow that matches the parent background color. We use white by default, but if you are adding a ring offset over a different background color, you should use the `ring-offset-{color}` utilities to match the parent background color:
+
+```html emerald
+<template preview class="p-0">
+  <div class="bg-emerald-100 grid grid-cols-1 gap-6 justify-items-center p-8 ">
+    <p class="font-semibold text-emerald-600">bg-green-100</p>
+    <button tabindex="-1" class="focus:outline-none text-sm px-5 py-3 rounded-md font-semibold text-white bg-emerald-500 ring ring-emerald-600 ring-offset-4 ring-offset-emerald-100">
+      ring-offset-green-100
+    </button>
+  </div>
+</template>
+
+<div class="... **bg-green-100**">
+  <button class="... ring ring-green-600 **ring-offset-4** **ring-offset-green-100**">
+    ring-offset-green-100
+  </button>
+</div>
+```
+
+For more information, see the [ringOffsetColor documentation](/docs/ring-offset-color).
+
+---
+
 
 ## Responsive
 
-To control the ring width at a specific breakpoint, add a `{screen}:` prefix to any existing ring width utility. For example, use `md:ring-4` to apply the `ring-4` utility at only medium screen sizes and above.
+To control the ring offset width at a specific breakpoint, add a `{screen}:` prefix to any existing ring offset width utility. For example, use `md:ring-offset-4` to apply the `ring-offset-4` utility at only medium screen sizes and above.
 
 ```html
-<button class="ring-2 **md:ring-4**">
+<button class="ring-2 ring-offset-2 **md:ring-offset-4**">
   <!-- ... -->
 </button>
 ```
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
+---
+
 ## Customizing
 
-To customize which ring width utilities are generated, use the `ringOffsetWidth` key in the `theme` section of your `tailwind.config.js` file.
+To customize which ring offset width utilities are generated, add your custom values under `ringOffsetWidth` key in the `theme` section of your `tailwind.config.js` file.
 
 ```js
-  // tailwind.config.js
-  module.exports = {
-    theme: {
-      extend: {
-        ringOffsetWidth: {
-          'DEFAULT': '2px',
-          '6': '6px',
-          '10': '10px',
-        }
+// tailwind.config.js
+module.exports = {
+  theme: {
+    extend: {
+      ringOffsetWidth: {
+        '3': '3px',
+        '6': '6px',
+        '10': '10px',
       }
     }
   }
+}
 ```
 
 Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
 ### Responsive and pseudo-class variants
 
-<Variants plugin="ringOffsetWidth" />
+<Variants plugin="ringWidth" />
 
 ### Disabling
 
-<Disabling plugin="ringOffsetWidth" />
+<Disabling plugin="ringWidth" />
