--- a/src/pages/docs/gap.mdx
+++ b/src/pages/docs/gap.mdx
@@ -33,6 +33,8 @@ Use `gap-{size}` to change the gap between both rows and columns in grid layouts
 </div>
 ```
 
+### Changing row and column gaps independently
+
 Use `gap-x-{size}` and `gap-y-{size}` to change the gap between rows and columns independently.
 
 ```html rose
@@ -59,6 +61,8 @@ Use `gap-x-{size}` and `gap-y-{size}` to change the gap between rows and columns
 </div>
 ```
 
+---
+
 ## Responsive
 
 To control the gap at a specific breakpoint, add a `{screen}:` prefix to any existing gap utility. For example, use `md:gap-6` to apply the `gap-6` utility at only medium screen sizes and above.
@@ -71,9 +75,9 @@ To control the gap at a specific breakpoint, add a `{screen}:` prefix to any exi
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-## Customizing
+---
 
-### Gap values
+## Customizing
 
 By default Tailwind's gap scale matches your configured [spacing scale](/docs/customizing-spacing).
 
