Rough in integration guides

--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -8,6 +8,21 @@ import { List, ListItemBad } from '@/components/List'
 import Link from 'next/link'
 import stats from '@/utils/stats'
 
+# Framework-specific guides
+
+- [Angular](/docs/guides/angular)
+- [Create React App](/docs/guides/create-react-app)
+- [Gatsby](/docs/guides/gatsby)
+- [Laravel](/docs/guides/laravel)
+- [Next.js](/docs/guides/nextjs)
+- [Nuxt.js](/docs/guides/nuxtjs)
+- [Rails](/docs/guides/rails)
+- [Vue 3](/docs/guides/vue-3-vite)
+
+---
+
+# General installation guide
+
 ## <Heading number="1">Install Tailwind via npm</Heading>
 
 For most projects (and to take advantage of Tailwind's customization features), you'll want to install Tailwind via npm.
