--- a/src/pages/docs/max-height.mdx
+++ b/src/pages/docs/max-height.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/maxHeight'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -43,23 +42,11 @@ To control the max-height of an element at a specific breakpoint, add a `{screen
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['max-h-full', 'max-h-screen', 'max-h-full', 'max-h-screen', 'max-h-full']}
-  snippet={(classNames) => `
-    <div class="h-24 ...">
-      <div class="h-48 ${classNames} ...">
-        <span>Target</span>
-      </div>
-    </div>
-  `}
-  preview={(className) => (
-    <div className="h-24 p-6 bg-gray-300">
-      <div className={`h-48 p-6 bg-gray-400 flex items-center justify-center ${className}`}>
-        <span>Target</span>
-      </div>
-    </div>
-  )}
-/>
+```html
+<div class="h-48 max-h-full md:max-h-screen** ...">
+  <span>Target</span>
+</div>
+```
 
 ---
 
