--- a/src/pages/docs/min-width.mdx
+++ b/src/pages/docs/min-width.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/minWidth'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -39,19 +38,11 @@ To control the min-width of an element at a specific breakpoint, add a `{screen}
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['min-w-0', 'min-w-full', 'min-w-0', 'min-w-full', 'min-w-0']}
-  snippet={(classNames) => `
-    <div class="w-24 ${classNames} ...">
-      Target
-    </div>
-  `}
-  preview={(className) => (
-    <div className={`w-24 text-center p-6 bg-gray-300 ${className}`}>
-      Target
-    </div>
-  )}
-/>
+```html
+<div class="w-24 min-w-full **md:min-w-0** ...">
+  <!-- ... -->
+</div>
+```
 
 ---
 
