--- a/src/pages/docs/opacity.mdx
+++ b/src/pages/docs/opacity.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/opacity'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -43,19 +42,11 @@ To control the opacity of an element at a specific breakpoint, add a `{screen}:`
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['opacity-100', 'opacity-75', 'opacity-50', 'opacity-25', 'opacity-0']}
-  snippet={(classNames) => `
-    <div class="${classNames} ...">
-      <!-- ... -->
-    </div>
-  `}
-  preview={(className) => (
-    <div className="text-center">
-      <div className={`px-4 py-2 bg-gray-400 w-24 h-24 rounded-full inline-block ${className}`} />
-    </div>
-  )}
-/>
+```html
+<div class="opacity-100 **md:opacity-50** ...">
+  <!-- ... -->
+</div>
+```
 
 ## Customizing
 
