--- a/src/pages/docs/position.mdx
+++ b/src/pages/docs/position.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/position'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 import { TipCompat } from '@/components/Tip'
 
 export const classes = { plugin }
@@ -234,19 +233,11 @@ To change how an element is positioned only at a specific breakpoint, add a `{sc
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['relative', 'absolute', 'fixed', 'absolute', 'relative']}
-  snippet={(classNames) => `
-    <div class="relative h-32 bg-gray-400 p-4">
-      <div class="inset-x-0 bottom-0 ${classNames}"></div>
-    </div>
-  `}
-  preview={(className) => (
-    <div className="relative h-32 bg-gray-400 p-4">
-      <div className={`inset-x-0 bottom-0 bg-gray-800 p-4 text-gray-500 ${className}`}>Responsive element</div>
-    </div>
-  )}
-/>
+```html
+<div class="relative h-32 ...">
+  <div class="inset-x-0 bottom-0 relative **md:absolute**"></div>
+</div>
+```
 
 ## Customizing
 
