--- a/src/pages/docs/guides/create-react-app.mdx
+++ b/src/pages/docs/guides/create-react-app.mdx
@@ -9,7 +9,7 @@ description: "Setting up Tailwind CSS in a Create React App project."
 
 Start by creating a new Create React App project if you don't have one set up already:
 
-```sh
+```shell
 npx create-react-app my-project
 ```
 
@@ -17,7 +17,7 @@ npx create-react-app my-project
 
 Install Tailwind, Autoprefixer and CRACO using `npm` or `yarn`:
 
-```sh
+```shell
 npm install tailwindcss autoprefixer@^9 @craco/craco
 ```
 
@@ -25,7 +25,7 @@ npm install tailwindcss autoprefixer@^9 @craco/craco
 
 Next, let's generate default `tailwind.config.js`:
 
-```sh
+```shell
 npx tailwindcss init
 ```
 
