--- a/src/pages/docs/guides/gatsby.mdx
+++ b/src/pages/docs/guides/gatsby.mdx
@@ -9,7 +9,7 @@ description: "Setting up Tailwind CSS in a Gatsby project."
 
 Start by creating a new Gatsby project if you don't have one set up already. The most common approach is to use the [Gatsby CLI](https://www.gatsbyjs.com/docs/quick-start/#install-the-gatsby-cli):
 
-```sh
+```shell
 gatsby new my-project
 ```
 
@@ -17,7 +17,7 @@ gatsby new my-project
 
 Install Tailwind, Autoprefixer, PostCSS and the `gatsby-plugin-postcss` Gatsby plugin using `npm` or `yarn`:
 
-```sh
+```shell
 npm install tailwindcss autoprefixer@^9 postcss gatsby-plugin-postcss
 ```
 
@@ -25,7 +25,7 @@ npm install tailwindcss autoprefixer@^9 postcss gatsby-plugin-postcss
 
 Next, let's generate default `tailwind.config.js` **and** `postcss.config.js` files:
 
-```sh
+```shell
 npx tailwindcss init -p
 ```
 
