--- a/src/pages/docs/guides/laravel.mdx
+++ b/src/pages/docs/guides/laravel.mdx
@@ -9,13 +9,13 @@ description: "Setting up Tailwind CSS in a Laravel project."
 
 Start by creating a new Laravel project if you don't have one set up already. The most common approach is to use the [Laravel Installer](https://laravel.com/docs/8.x#via-laravel-installer):
 
-```sh
+```shell
 laravel new my-project
 ```
 
 Next, install Laravel's front-end dependencies using `npm` or `yarn`:
 
-```sh
+```shell
 npm install
 ```
 
@@ -23,7 +23,7 @@ npm install
 
 Install Tailwind using `npm` or `yarn`:
 
-```sh
+```shell
 npm install tailwindcss
 ```
 
