--- a/src/pages/docs/guides/nextjs.mdx
+++ b/src/pages/docs/guides/nextjs.mdx
@@ -9,7 +9,7 @@ description: "Setting up Tailwind CSS in a Next.js project."
 
 Start by creating a new NextJS project if you don't have one set up already. The most common approach is to use [Create Next App](https://nextjs.org/docs/api-reference/create-next-app):
 
-```sh
+```shell
 npx create-next-app my-project
 ```
 
@@ -17,7 +17,7 @@ npx create-next-app my-project
 
 Install Tailwind and Autoprefixer using `npm` or `yarn`:
 
-```sh
+```shell
 npm install tailwindcss autoprefixer@^9
 ```
 
@@ -25,7 +25,7 @@ npm install tailwindcss autoprefixer@^9
 
 Next, let's generate default `tailwind.config.js` **and** `postcss.config.js` files:
 
-```sh
+```shell
 npx tailwindcss init -p
 ```
 
