--- a/src/pages/docs/guides/rails.mdx
+++ b/src/pages/docs/guides/rails.mdx
@@ -9,7 +9,7 @@ description: "Setting up Tailwind CSS in a Rails project."
 
 Start by creating a new Rails project if you don't have one set up already. The most common approach is to use the [Rails CLI](https://guides.rubyonrails.org/command_line.html#rails-new):
 
-```sh
+```shell
 rails new my-project
 ```
 
@@ -17,7 +17,7 @@ rails new my-project
 
 Install Tailwind using `npm` or `yarn`:
 
-```sh
+```shell
 yarn add tailwindcss
 ```
 
@@ -42,7 +42,7 @@ module.exports = {
 
 Next, let's create a default Tailwind config file:
 
-```sh
+```shell
 npx tailwindcss init
 ```
 
