--- a/src/pages/docs/guides/vue-3-vite.mdx
+++ b/src/pages/docs/guides/vue-3-vite.mdx
@@ -8,13 +8,13 @@ description: "Setting up Tailwind CSS in a Vue 3 and Vite project."
 
 Start by creating a new Vue 3 project if you don't have one set up already. A possible approach here is to use [Vite](https://github.com/vitejs/vite#getting-started):
 
-```sh
+```shell
 npm init vite-app my-project
 ```
 
 Next, move into your new `my-project` directory and install the front-end dependencies using `npm` or `yarn`:
 
-```sh
+```shell
 cd my-project && yarn
 ```
 
@@ -22,7 +22,7 @@ cd my-project && yarn
 
 Install Tailwind and Autoprefixer as `devDepencies` using `npm` or `yarn`:
 
-```sh
+```shell
 npm install -D tailwindcss autoprefixer@^9
 ```
 
@@ -30,7 +30,7 @@ npm install -D tailwindcss autoprefixer@^9
 
 Next, let's generate default config files for Tailwind CSS and PostCSS:
 
-```sh
+```shell
 npx tailwindcss init -p
 ```
 
