--- a/src/pages/docs/upgrading-to-v2.mdx
+++ b/src/pages/docs/upgrading-to-v2.mdx
@@ -15,7 +15,7 @@ Tailwind CSS v2.0 has been updated for the latest PostCSS release which requires
 
 Update Tailwind and install PostCSS using npm or Yarn:
 
-```sh
+```shell
 # Using npm
 npm install tailwindcss postcss
 
