--- a/src/pages/docs/upgrading-to-v2.mdx
+++ b/src/pages/docs/upgrading-to-v2.mdx
@@ -52,11 +52,11 @@ Updating `whitespace-no-wrap` and `flex-no-wrap` is just a direct replacement, a
 
 The `clearfix` class has been removed since `flow-root` is a simpler solution to the same problem in modern browsers.
 
-```diff
--  <div class="clearfix">
-+  <div class="flow-root">
-     <img class="float-left" src="..." alt="..." />
-     <p>Lorem ipsum...</p>
+```diff-html
+- <div class="clearfix">
++ <div class="flow-root">
+    <img class="float-left" src="..." alt="..." />
+    <p>Lorem ipsum...</p>
   </div>
 ```
 
@@ -68,14 +68,14 @@ These are a much better and more powerful alternative to the `shadow-outline` an
 
 Replace `shadow-outline` with `ring`:
 
-```diff
+```diff-html
 - <div class="... focus:shadow-outline">
 + <div class="... focus:ring">
 ```
 
 Replace `shadow-xs` with `ring-1 ring-black ring-opacity-5`:
 
-```diff
+```diff-html
 - <div class="... shadow-xs">
 + <div class="... ring-1 ring-black ring-opacity-5">
 ```
@@ -265,7 +265,7 @@ module.exports = {
 
 Alternatively, you can go through your HTML and explicitly add a `leading` utility anywhere where you were depending on an inherited line-height:
 
-```diff
+```diff-html
 - <p class="text-lg">...</p>
 + <p class="text-lg leading-normal">...</p>
 ```
@@ -447,7 +447,7 @@ We don't support this anymore, so update any `@apply` statements and remove the 
 
 The `truncate` utility is now part of the `textOverflow` core plugin, so if you had enabled any extra variants (like `group-hover`) for the `wordBreak` plugin in order to use them with the `truncate` class, you'll want to enable them for `textOverflow` now as well or instead:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     variants: {
@@ -523,7 +523,7 @@ We've updated how this works to no longer special case `template` elements and i
 
 To update your code for this change, just add `hidden` to your `template` tags:
 
-```diff
+```diff-html
   <div class="space-y-4">
 -   <template x-for="item in items">
 +   <template x-for="item in items" hidden>
@@ -538,7 +538,7 @@ Internally we've upgraded to [PurgeCSS 3.0](https://github.com/FullHuman/purgecs
 
 For example, if you were using `whitelist`, you'll want to update this to `safelist`:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     purge: {
@@ -559,7 +559,7 @@ If you weren't using the `options` key, you don't need to do anything.
 
 In v1.0, Tailwind ignored the `preserveHtmlElements` option if you were using a custom extractor. This option is now properly respected in v2.0, so if you want to disable it you'll need to do so explicitly:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     purge: {
@@ -582,7 +582,7 @@ If you've configured a prefix in your `tailwind.config.js` file, Tailwind v2.0 w
 
 If you are referencing any configured keyframes in custom CSS, you'll want to make sure you add your prefix:
 
-```diff
+```diff-css
   .my-class {
 -   animation: spin 1s infinite;
 +   animation: tw-spin 1s infinite;
